--- a/locale/bg/LC_MESSAGES/django.po
+++ b/locale/bg/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-07-13 14:04+0300\n"
-"PO-Revision-Date: 2021-07-13 11:05+0000\n"
+"PO-Revision-Date: 2021-07-15 07:31+0000\n"
 "Last-Translator: b'  <>'\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -243,7 +243,7 @@ msgstr "Име на компанията"
 
 #: category/models.py:105
 msgid "position_1"
-msgstr "Позиции"
+msgstr "Позиция"
 
 #: category/models.py:106
 msgid "start_date_1"
@@ -263,7 +263,7 @@ msgstr "Име на компанията"
 
 #: category/models.py:110
 msgid "position_2"
-msgstr "Позиции"
+msgstr "Позиция"
 
 #: category/models.py:111
 msgid "start_date_2"
@@ -283,7 +283,7 @@ msgstr "Име на компанията"
 
 #: category/models.py:115
 msgid "position_3"
-msgstr "Позиции"
+msgstr "Позиция"
 
 #: category/models.py:116
 msgid "start_date_3"
